feat: health endpoint
